--- a/JS/03-24.md
+++ b/JS/03-24.md
@@ -1,3 +1,3 @@
 자바스크립트(JavaScript)는 객체(object) 기반의 스크립트 언어입니다.
-네 알겠습니다. 알려주셔서 감사합니다 :D
 
+자바스크립트는 본래 브라우저를 제어하는 언어였으나, Node.js라는 새로운 실행환경과 구글 V8 엔진의 등장으로 자체 어플리케이션을 만들 수 있게 된 언어입니다.
