--- a/JS/03-24.md
+++ b/JS/03-24.md
@@ -1,5 +1,13 @@
-자바스크립트(JavaScript)는 객체(object) 기반의 스크립트 언어입니다.
+자바스크립트(JavaScript)는 객체(object) 기반의 스크립트 언어입니다
 
 자바스크립트는 본래 브라우저를 제어하는 언어였으나, Node.js라는 새로운 실행환경과 구글 V8 엔진의 등장으로 자체 어플리케이션을 만들 수 있게 된 언어입니다.
 
 또한 자바스크립트는 명령형, 함수형, 객체지향 프로그래밍이 모두 가능한 멀티 패러다임 언어입니다.
+
+자바스크립트가 가지고 있는 언어적 특징은 다음과 같습니다.
+
+- 자바스크립트는 객체 기반의 스크립트 언어입니다.
+
+- 자바스크립트는 동적이며, 타입을 명시할 필요가 없는 인터프리터 언어입니다.
+
+- 자바스크립트는 객체 지향형 프로그래밍과 함수형 프로그래밍을 모두 표현할 수 있습니다.
