--- a/JS/03-24.mdx
+++ b/JS/03-24.mdx
@@ -23,7 +23,7 @@
 비동기 방식을 통해 여러개의 작업을 동시에 하는 것 처럼 보이는 멀티 태스킹을 사용한다.
 Web API, Callback Queue, Event Loop등을 이용한다.
 
-![call stack ~ evnt loop 사진](image-1.png)
+<img src="../asset/callstack.png" alt="콜스택" />
 
 비동기 방식을 통해 여러개의 작업을 동시에 하는 것 처럼 보이는 멀티 태스킹을 사용한다.
 Web API, Callback Queue, Event Loop등을 이용한다.
@@ -43,8 +43,13 @@ console.log("이건 언제 실행?");
 ```
 
 1. 맨 처음에는 console.log("맨 처음 실행") 가 Call Stack에 쌓이는데, 이건 바로 실행되어 제거된다.
+
 2. setTimeout이 Call Stack에 쌓인다. setTimeout이 실행되면 Web API에서 Timeout(Node.js에는 Timers)이 timer를 생성한다.
+
 3. console.log("이건 언제 실행?") 이 Call Stack에 쌓이고 바로 실행되고 제거된다.
+
 4. Web API에서 생성된 timer는 생성된 시점을 기준으로 최소 1초 후에 Task Queue(=Callback Queue)로 콜백을 전달한다.
+
 5. Event Loop가 Call Stack에 스택이 없는 것을 확인하면, setTimeout의 콜백함수를 Call Stack으로 호출시킨다.
+
 6. Call Stack에 불러온 콜백함수가 실행된다.
