--- a/JS/03-24.mdx
+++ b/JS/03-24.mdx
@@ -23,7 +23,7 @@
 비동기 방식을 통해 여러개의 작업을 동시에 하는 것 처럼 보이는 멀티 태스킹을 사용한다.
 Web API, Callback Queue, Event Loop등을 이용한다.
 
-<img src="../asset/callstack.png" alt="콜스택" />
+![](../asset/callstack.png)
 
 비동기 방식을 통해 여러개의 작업을 동시에 하는 것 처럼 보이는 멀티 태스킹을 사용한다.
 Web API, Callback Queue, Event Loop등을 이용한다.
